[package]
name = "jsonc"
version = "0.1.0"
edition = "2024"
description = "JSON with Comments editor - Edit JSON files with comments"
authors = ["mod"]
license = "MIT"

[dependencies]
serde_json = "1.0"
regex = "1.10"
tempfile = "3.14"
clap = { version = "4.5", features = ["derive"] }
notify = "6.1"
